# sakura

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/config/editor/: imgui.ini
docs/diagrams/: Untitled Diagram.drawio  place_diagrams_here  plugin_architecture.drawio
src/: .clang-format  app.cpp  app.hpp  platform.hpp  platform_SDL2.cpp  test.cpp  type_aliases.hpp
src/editor/: CMakeLists.txt  editor_main.cpp
src/editor/scene/: scene.hpp
src/editor/widgets/: entity_inspector.cpp  entity_inspector.hpp  log_window.cpp  log_window.hpp  scene_browser.cpp  scene_browser.hpp  toolbar.cpp  toolbar.hpp  widgets.cpp  widgets.hpp
src/examples/: CMakeLists.txt  test.cpp
src/game_lib/: CMakeLists.txt  game.cpp  game.hpp
src/game_lib/components/: components.hpp
src/launcher/: CMakeLists.txt  launcher_main.cpp
src/plugins/: CMakeLists.txt
src/plugins/editor/: CMakeLists.txt
src/plugins/editor/editor_ui_plugin/: CMakeLists.txt  editor_ui_plugin.hpp
src/plugins/editor/editor_ui_plugin/private/: editor_ui_plugin.cpp
src/plugins/editor/test_plugin/: CMakeLists.txt  test_plugin.hpp
src/plugins/editor/test_plugin/private/: test_plugin.cpp
src/plugins/game/: CMakeLists.txt
src/plugins/game/test_plugin/: test_plugin.hpp
src/plugins/game/test_plugin/private/: test_plugin.cpp
src/sakura/: CMakeLists.txt  app.cpp  app.hpp  log.hpp  platform.hpp  type_aliases.hpp
src/sakura/components/: components.hpp
src/sakura/cpp_hotreloading/: cpp_hotreloading.hpp
src/sakura/cpp_hotreloading/private/: cpp_hotreloading.cpp
src/sakura/ecs/: ecs.cpp  ecs.hpp
src/sakura/imgui/: imgui.hpp
src/sakura/imgui/private/SDL2/: imgui_SDL2.cpp
src/sakura/log/: log.cpp  log.hpp
src/sakura/platform/: input.hpp  platform.hpp
src/sakura/platform/private/: keyboard_codes.hpp
src/sakura/platform/private/SDL2/: input_SDL2.cpp  platform_SDL2.cpp  platform_SDL2.hpp
src/sakura/plugin_system/: plugin_interfaces.hpp  plugin_system.hpp
src/sakura/plugin_system/private/: plugin_hotreload.cpp  plugin_system.cpp
src/sakura/private/: app.cpp
src/sakura/private/SDL2/: platform_SDL2.cpp
src/sakura/serialization/: serialization.hpp  serialization_base.hpp  serialization_json.hpp
src/sakura/time/: time.cpp  time.hpp
src/test_plugin/: CMakeLists.txt  test_plugin.hpp
src/test_plugin/private/: test_plugin.cpp
